tests/snapshots/snapshots__error_snapshots.snap
---
source: tests/snapshots.rs
expression: buf
---

  × 17 errors

Error: missing-def-and-ref

  × error: missing both 'def:' and 'ref:' keys in magic comment; this will prevent cross-referencing
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:1:1]
 1 │ NOTE(username):
   · ──────────────
 2 │ FIXME(something):
   ╰────
  help: add 'def: unique-id' or a 'ref: unique-id' to define/reference a magic comment
Error: missing-def-and-ref

  × error: missing both 'def:' and 'ref:' keys in magic comment; this will prevent cross-referencing
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:1:1]
 1 │ NOTE(username):
 2 │ FIXME(something):
   · ────────────────
 3 │ TODO(dat guy):
   ╰────
  help: add 'def: unique-id' or a 'ref: unique-id' to define/reference a magic comment
Error: missing-def-and-ref

  × error: missing both 'def:' and 'ref:' keys in magic comment; this will prevent cross-referencing
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:2:1]
 2 │ FIXME(something):
 3 │ TODO(dat guy):
   · ─────────────
 4 │ 
   ╰────
  help: add 'def: unique-id' or a 'ref: unique-id' to define/reference a magic comment
Error: empty-attr-key-or-value

  × error: missing value after ':' for key novalue
    ╭─[tests/snapshots/error-basics/single-file-errors.txt:18:1]
 18 │ 
 19 │ NOTE(def: ok, :, novalue:, : nokey, https://lol.cat)
    ·                  ────────
    ╰────
Error: empty-attr-key-or-value

  × error: missing key before ':'
    ╭─[tests/snapshots/error-basics/single-file-errors.txt:18:1]
 18 │ 
 19 │ NOTE(def: ok, :, novalue:, : nokey, https://lol.cat)
    ·                            ───────
    ╰────
Error: empty-attr-key-or-value

  × error: missing key and value around ':'
    ╭─[tests/snapshots/error-basics/single-file-errors.txt:18:1]
 18 │ 
 19 │ NOTE(def: ok, :, novalue:, : nokey, https://lol.cat)
    ·               ─
    ╰────
Error: malformed-attr

  × error: found attribute not in 'key: value' format
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:1:1]
 1 │ NOTE(username):
   ·      ────────
 2 │ FIXME(something):
   ╰────
Error: malformed-attr

  × error: found attribute not in 'key: value' format
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:1:1]
 1 │ NOTE(username):
 2 │ FIXME(something):
   ·       ─────────
 3 │ TODO(dat guy):
   ╰────
Error: malformed-attr

  × error: found attribute not in 'key: value' format
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:2:1]
 2 │ FIXME(something):
 3 │ TODO(dat guy):
   ·      ───────
 4 │ 
   ╰────
Error: malformed-attr

  × error: found attribute not in 'key: value' format
    ╭─[tests/snapshots/error-basics/single-file-errors.txt:8:1]
  8 │ 
  9 │ See TODO(blah, ref: undef-t, stuff)
    ·          ────
 10 │ 
    ╰────
Error: malformed-attr

  × error: found attribute not in 'key: value' format
    ╭─[tests/snapshots/error-basics/single-file-errors.txt:8:1]
  8 │ 
  9 │ See TODO(blah, ref: undef-t, stuff)
    ·                              ─────
 10 │ 
    ╰────
Error: unknown-attr-key

  × error: found unknown attribute key 'https' for NOTE
    ╭─[tests/snapshots/error-basics/single-file-errors.txt:18:1]
 18 │ 
 19 │ NOTE(def: ok, :, novalue:, : nokey, https://lol.cat)
    ·                                     ─────
    ╰────
Error: undefined-ref

  × error: missing definition for reference to undef-n
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:4:1]
 4 │ 
 5 │ See NOTE(ref: undef-n)
   ·               ───────
 6 │ 
   ╰────
  help: did you delete or forget to add a NOTE(def: undef-n) somewhere?

Error: undefined-ref

  × missing definition for reference to undef-n
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:6:1]
 6 │ 
 7 │ See WARNING(ref: undef-n)
   ·                  ───────
 8 │ 
   ╰────
  help: did you delete or forget to add a WARNING(def: undef-n) somewhere?
Error: undefined-ref

  × error: missing definition for reference to undef-r
    ╭─[tests/snapshots/error-basics/single-file-errors.txt:16:1]
 16 │ 
 17 │ See REVIEW(ref: undef-r)
    ·                 ───────
 18 │ 
    ╰────
  help: did you delete or forget to add a REVIEW(def: undef-r) somewhere?
Error: inconsistent-id-kind

  × error: used in a NOTE here
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:4:1]
 4 │ 
 5 │ See NOTE(ref: undef-n)
   ·               ───────
 6 │ 
   ╰────
  help: consistently use this id in a NOTE or a WARNING

Error: inconsistent-id-kind

  × used in a WARNING here
   ╭─[tests/snapshots/error-basics/single-file-errors.txt:6:1]
 6 │ 
 7 │ See WARNING(ref: undef-n)
   ·                  ───────
 8 │ 
   ╰────

